# persona-gen-agent-mvp

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
backend/: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
backend/agent/: chatbot_agent.py  parameter_agent.py  parser_agent.py  prompt_agent.py
backend/api/: __init__.py  generate.py  templates.py
backend/api/chatbot/: __init__.py  api.py  chat.py  chatbot.py  conversations.py  session.py
backend/config/: settings.py
backend/data/: persona_templates.py
backend/database/: db.py
backend/utils/: common.py
docker/: .env.example  docker-compose.yml
docs/: 人格提示词与OpenAI参数生成AI Agent产品方案.md  人格提示词与OpenAI参数生成AI Agent产品方案（第一阶段MVP落地版-项目结构+核心代码）.md
frontend/: .dockerignore  .gitignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  style.css
frontend/src/components/: ChatApp.vue  ChatBotManager.vue  InputPanel.vue  LLMDebugPanel.vue  OutputPanel.vue  SessionManager.vue
frontend/src/router/: index.js
frontend/src/utils/: request.js
